<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="offersViewModel"
            type="com.anandgaur.techugotask.ui.offers.OffersViewModel" />
    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tab_background"
        android:orientation="vertical">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_250"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg_map"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/map"
                    android:textColor="@color/colorPrimary"
                    android:drawablePadding="@dimen/margin_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                    app:drawableLeftCompat="@drawable/ic_location" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg_map"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/call"
                    android:textColor="@color/colorPrimary"
                    android:drawablePadding="@dimen/margin_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                    app:drawableLeftCompat="@drawable/ic_call" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg_map"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/menu"
                    android:textColor="@color/colorPrimary"
                    android:drawablePadding="@dimen/margin_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageSlider"
                    app:drawableLeftCompat="@drawable/ic_menu" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="3"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/tv_offers_left_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/offers"

                    android:textColor="@color/black"
                    android:textSize="@dimen/diment_18" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/tv_offers_right_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"/>

            </LinearLayout>





        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:background="@color/tab_background"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_coupons_list" />

            <TextView
                android:id="@+id/tv_no_record_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_30dp"
                android:fontFamily="@font/roboto_regular"
                android:padding="10dp"
                android:text="@string/no_record_found"
                android:textColor="@color/colorPrimary"
                android:layout_centerInParent="true"
                android:textSize="@dimen/diment_18"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>




</androidx.core.widget.NestedScrollView>
</layout>
